...
        isViewLoaded ? view as? ProfileView : nil
    }

    // MARK: - Lifecycle

    override func loadView() {
        view = ProfileView(actionButtonTitle: "Cохранить", isRepeatPasswordHidden: true)
    }

    override func viewDidLoad() {
        super.viewDidLoad()
        setupViewComponents()
        keyboardObserver = KeyboardObserver(targetView: profileView?.scrollView)
...
    @objc private func exitButtonDidTap(_ sender: UIButton) {
        presenter.exitButtonDidTap()
    }

    private func setupUITests() {
        view.accessibilityIdentifier = "profileView"
        navigationItem.rightBarButtonItem?.accessibilityIdentifier = "logoutButton"
    }
}

// MARK: - Extensions

extension EditProfileViewController: EditProfileViewProtocol {
...
