//
//  Gender.swift
//  GBShop
//
//  Created by Artem Mayer on 01.03.2023.
//

import Foundation

enum Gender: String, Codable {
    case man = "Мужской"
    case woman = "Женский"
    case indeterminate = "Другой"
}
